package.json scripts added

--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
+    "dev": "rimraf .next && next dev --turbopack",
+    "build": "next lint && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prod": "rimraf .next && next lint && next build && next start"
   },
   "dependencies": {
+    "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.4"
+    "rimraf": "6.0.1"
   },
   "devDependencies": {
     "typescript": "5",
